--- a/arca/templates/arca/comercio/registrar_negocio.html
+++ b/arca/templates/arca/comercio/registrar_negocio.html
@@ -1,10 +1,10 @@
-{% extends "arca/base2.html" %}
+{% extends "arca/comercio/base3.html" %}
 
 {% block page-tible %}REGISTRO DE NEGOCIO{% endblock %}
 {% block breadcrumb %}
 <li><a href="{% url 'arca_index' %}">Inicio</a></li>
-    <li><a href="{% url 'account_profile' %}">Perfil</a></li>
-<li class="active">Registro de negocio</li>
+    <li><a href="{% url 'mi_comercio' %}">Mi Comercio</a></li>
+<li class="active">Registro de comercio</li>
 {% endblock %}
 {% block main-content %}
     <div class="row">
