--- a/arca/templates/arca/comercio/mi_comercio.html
+++ b/arca/templates/arca/comercio/mi_comercio.html
@@ -1,4 +1,4 @@
-{% extends "arca/base2.html" %}
+{% extends "arca/comercio/base3.html" %}
 
 {% block page-tible %}COMERCIO{% endblock %}
 {% block style-block%}
@@ -16,20 +16,21 @@
 <li class="active">Mi Comercio</li>
 {% endblock %}
 {% block main-content %}
-{% include "arca/_empresa.html" %}
+{% include "arca/comercio/_empresa.html" %}
 <div class="row">
   <div class="col-xs-12 commentsForm">
     <div class="tabCommon">
       <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#menu1" aria-expanded="true">Descuentos</a></li>
         <li class=""><a data-toggle="tab" href="#menu2" aria-expanded="false">Cupones expedidos</a></li>
-        <li class=""><a data-toggle="tab" href="#menu3" aria-expanded="false">Mis productos</a></li>
+        <li class=""><a data-toggle="tab" href="#menu3" aria-expanded="false">Empleados</a></li>
+        <li class=""><a data-toggle="tab" href="#menu4" aria-expanded="false">Mis productos</a></li>
       </ul>
       <div class="tab-bottom">
       </div>
       <div class="tab-content">
         <div id="menu1" class="tab-pane fade  active in">
-          <button id="btnDescuento" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button>
+          <button id="btnDescuento" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button><br><br>
           <div class="row">
             <div class="col-xs-12">
               <div class="orderBox" id="content-listado-descuento">
@@ -40,7 +41,7 @@
 
         </div>
         <div id="menu2" class="tab-pane fade">
-          <button id="btnCupon" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button>
+          <button id="btnCupon" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button><br>
           <select id="filtro_canjeado">
             <option value="todos">Todos</option>
             <option value="True">Canjeados</option>
@@ -64,6 +65,15 @@
           </div>
         </div>
         <div id="menu3" class="tab-pane fade">
+          <button id="btnEmpleado" class="btn btn-primary">Nuevo <i class="fa fa-plus"></i></button><br><br>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="orderBox" id="content-listado-empleados">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="menu4" class="tab-pane fade">
           <div class="row">
             <div class="col-xs-12">
               <div class="orderBox">
@@ -129,23 +139,26 @@
 
 {% block script-block %}
 <script>
-  $(document).ready(function () {
-    $.ajaxSetup({ cache: false });
-    $("#btnDescuento").on('click',function () {
-      nuevoDescuento();
+    $(document).ready(function () {
+        $("#btnDescuento").on('click',function () {
+            nuevoDescuento();
+        });
+        $("#btnCupon").on('click',function () {
+            nuevoCupon();
+        });
+        $("#btnEmpleado").on('click', function () {
+            nuevoEmpleado();
+        });
+        mostrarDescuentos();
+        mostrarCupones();
+        mostrarEmpleados();
+        $('#filtro_canjeado').on('change', mostrarCupones);
+        $('#filtro_empleado').on('change', mostrarCupones);
+        $('#fecha_inicial').on('change', mostrarCupones);
+        $('#fecha_final').on('change', mostrarCupones);
     });
-    $("#btnCupon").on('click',function () {
-      nuevoCupon();
-    });
-    mostrarDescuentos();
-    mostrarCupones();
-    $('#filtro_canjeado').on('change', mostrarCupones);
-    $('#filtro_empleado').on('change', mostrarCupones);
-    $('#fecha_inicial').on('change', mostrarCupones);
-    $('#fecha_final').on('change', mostrarCupones);
-  });
 
-  function init_modal_descuento_triguers() {
+    function init_modal_descuento_triguers() {
     $(".modal-triguer").on("click", function (e) {
       $('#conten-modal').load(this.href, function () {
         $('#signup').modal({
@@ -170,24 +183,24 @@
       return false;
     });
 
-  }
+    }
 
 
 
-  function nuevoDescuento() {
-    $.ajax({
-      url:"{% url 'render_descuento' %}",
-      type:"GET",
-      success: function (result) {
-        $("#conten-modal").empty().html(result);
-        $("#signup").modal({
-          backdrop: 'static',
-          keyboard: false
+    function nuevoDescuento() {
+        $.ajax({
+          url:"{% url 'render_descuento' %}",
+          type:"GET",
+          success: function (result) {
+            $("#conten-modal").empty().html(result);
+            $("#signup").modal({
+              backdrop: 'static',
+              keyboard: false
+            });
+          }
         });
-      }
-    });
-  }
-  function mostrarDescuentos() {
+    }
+    function mostrarDescuentos() {
     $.ajax({
       url:"{% url 'render_listado_descuento' %}",
       type:"GET",
@@ -196,31 +209,31 @@
         init_modal_descuento_triguers();
       }
     });
-  }
-  function guardarDescuento() {
-    var data =$('#conten-modal :input').serialize();
+    }
+    function guardarDescuento() {
+        var data =$('#conten-modal :input').serialize();
 
-    $.ajax({
-      url:"{% url 'save_descuento' %}",
-      type:"post",
-      data:data,
-      success: function (result) {
-        var data=result[0];
-        if(data.code==200){
-          $("#signup").modal('hide');
-          mostrarDescuentos();
-        }else {
-          swal({
-            title: "Upss.. ha ocurrido un inconveniente",
-            text: data.mensaje,
-            type: "warning"
-          });
-        }
-      }
-    });
-  }
+        $.ajax({
+          url:"{% url 'save_descuento' %}",
+          type:"post",
+          data:data,
+          success: function (result) {
+            var data=result[0];
+            if(data.code==200){
+              $("#signup").modal('hide');
+              mostrarDescuentos();
+            }else {
+              swal({
+                title: "Upss.. ha ocurrido un inconveniente",
+                text: data.mensaje,
+                type: "warning"
+              });
+            }
+          }
+        });
+    }
 
-  function mostrarCupones() {
+    function mostrarCupones() {
     var filtros = {};
     var canjeado = $('#filtro_canjeado').val();
     var empleado = $('#filtro_empleado').val();
@@ -245,8 +258,8 @@
         //init_modal_descuento_triguers();
       }
     });
-  }
-  function nuevoCupon() {
+    }
+    function nuevoCupon() {
     $.ajax({
       url:"{% url 'render_cupon' %}",
       type:"GET",
@@ -258,8 +271,8 @@
         });
       }
     });
-  }
-  function guardarCupon() {
+    }
+    function guardarCupon() {
     var data =$('#conten-modal :input').serialize();
 
     $.ajax({
@@ -280,8 +293,64 @@
         }
       }
     });
-  }
+    }
 
+    function mostrarEmpleados() {
+    $.ajax({
+      url:"{% url 'render_listado_empleado' %}",
+      type:"GET",
+      success:function (result) {
+          $("#content-listado-empleados").empty().html(result);
+          init_modal_empleado_triguers();
+      }
+    });
+    }
+    function init_modal_empleado_triguers() {
+        $(".modal-triguer").on("click", function (e) {
+          $('#conten-modal').load(this.href, function () {
+            $('#signup').modal({
+              backdrop: 'static',
+              keyboard: true
+            }, 'show');
+          });
+          return false;
+        });
+    }
+    function nuevoEmpleado() {
+        $.ajax({
+          url:"{% url 'render_empleado' %}",
+          type:"GET",
+          success: function (result) {
+            $("#conten-modal").empty().html(result);
+            $("#signup").modal({
+              backdrop: 'static',
+              keyboard: false
+            });
+          }
+        });
+    }
+    function guardarEmpleado() {
+        var data =$('#conten-modal :input').serialize();
+
+        $.ajax({
+          url:"{% url 'save_empleado' %}",
+          type:"post",
+          data:data,
+          success: function (result) {
+            var data=result[0];
+            if(data.code==200){
+              $("#signup").modal('hide');
+              mostrarEmpleados();
+            }else {
+              swal({
+                title: "Upss.. ha ocurrido un inconveniente",
+                text: data.mensaje,
+                type: "warning"
+              });
+            }
+          }
+        });
+    }
 </script>
 
 {% endblock %}
