--- a/inblensa/templates/app/index.html
+++ b/inblensa/templates/app/index.html
@@ -824,7 +824,7 @@
             }
             function reset_cartera_cobro() {
                 $.ajax({
-                    url:"../app/reset_recibos/",
+                    url:"../inblensa/reset_recibos/",
                     type:"GET",
                     success:function (data) {
                         $("#total_cartera_cobro").html("0.0")
@@ -833,7 +833,7 @@
             }
             function reset_inventario_facturacion() {
                 $.ajax({
-                    url:"../app/reset_ventas/",
+                    url:"../inblensa/reset_ventas/",
                     type:"GET",
                     success:function (data) {
                         $("#total_inventario_facturacion").html("0.0")
