--- a/arca/templates/arca/comercio/_empresa.html
+++ b/arca/templates/arca/comercio/_empresa.html
@@ -7,20 +7,20 @@
           <div class="panel-body">
             <div class="row">
               <div class="col-sm-2 col-xs-12">
-                  <span class="cartImage"><img src="/media/{{ comercio.logo }}" class="img-responsive img-thumbnail" alt="image"></span>
+                  <span class="cartImage"><img src="/media/{{ auth_comercio.logo }}" class="img-responsive img-thumbnail" alt="image"></span>
               </div>
               <div class="col-sm-4 col-xs-12">
 
                 <address>
-                  <span>RUC/NIT: {{ comercio.identificacion }}</span><br>
-                  <span>Phone: +505 {{ comercio.telefono }}</span>
+                  <span>RUC/NIT: {{ auth_comercio.identificacion }}</span><br>
+                  <span>Phone: +505 {{ auth_comercio.telefono }}</span>
                 </address>
               </div>
               <div class="col-sm-6 col-xs-12">
                 <address>
                   <span>Direccion: </span><br>
-                  <p>{{ comercio.direccion }}</p><br>
-                    <a href="{% url 'edit_comercio' %}?id={{ comercio.id }}" class="btn btn-primary"><i class="fa fa-edit fa-fw"></i>Editar</a>
+                  <p>{{ auth_comercio.direccion }}</p><br>
+                    <a href="{% url 'edit_comercio' %}?id={{ auth_comercio.id }}" class="btn btn-primary"><i class="fa fa-edit fa-fw"></i>Editar</a>
                 </address>
               </div>
             </div>
