--- a/arca/templates/arca/comercio/base3.html
+++ b/arca/templates/arca/comercio/base3.html
@@ -220,6 +220,7 @@
     <script src="/static/options/optionswitcher.js"></script>
     <script src="/static/js/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/sweetalert2/6.4.3/sweetalert2.min.js"></script>
+    <script src="/static/js/numeric.min.js"></script>
   {% block script-block %}
 
   {% endblock script-block %}
