--- a/arca/templates/arca/comercio/registrar_negocio.html
+++ b/arca/templates/arca/comercio/registrar_negocio.html
@@ -7,6 +7,9 @@
 <li class="active">Registro de comercio</li>
 {% endblock %}
 {% block main-content %}
+    <style>
+    .gllpMap	{ width: 500px; height: 250px; }
+    </style>
     <div class="row">
         <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12 logIn">
           <div class="panel panel-default">
@@ -14,6 +17,8 @@
             <div class="panel-body">
               <form action="#" method="POST" role="form" enctype="multipart/form-data">
                   {% csrf_token %}
+
+
                   {% if success_message %}
                       <div class="alert alert-success alert-dismissible" role="alert">
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -50,6 +55,14 @@
                           </div>
                       {% endif %}
                   {% endfor %}
+                  <fieldset class="gllpLatlonPicker">
+                    <input type="text" class="gllpSearchField">
+                    <input type="button" class="gllpSearchButton" value="search">
+                    <div class="gllpMap">Google Maps</div>
+                    <input type="hidden" class="gllpLatitude" value="20"/>
+                    <input type="hidden" class="gllpLongitude" value="20"/>
+                    <input type="hidden" class="gllpZoom" value="3"/>
+                  </fieldset>
                 <button type="submit" class="btn btn-primary btn-block">Registrar</button>
               </form>
             </div>
@@ -58,6 +71,11 @@
     </div>
 {% endblock %}
 {% block script-block %}
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCqPdfjM76erNHpC9HR3azDso29bBX6L_c&sensor=false"></script>
+    <script src="/static/js/jquery-gmaps-latlon-picker.js"></script>
+    <script>
+        $.gMapsLatLonPickerNoAutoInit = 1;
+    </script>
     <script>
         $(document).ready(function () {
             listado_categoria();
