--- a/arca/templates/arca/comercio/_descuento.html
+++ b/arca/templates/arca/comercio/_descuento.html
@@ -122,6 +122,16 @@
             <span class="label label-primary">Premium</span>
         </div>
     {% endif %}
+    <div class="row">
+        <div class="form-group col-sm-12 col-xs-12">
+            <label for="">Activo</label>
+            {% if descuento.activo %}
+                <input type="checkbox" id="activo" name="activo" checked>
+            {% else %}
+                <input type="checkbox" id="activo" name="activo">
+            {% endif %}
+        </div>
+    </div>
     <button class="btn btn-primary btn-block" onclick="guardarDescuento()">Guardar <i class="fa fa-save fa-fw"></i></button>
 
 
