--- a/arca/templates/arca/base2.html
+++ b/arca/templates/arca/base2.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="/static/options/animate.css">
     <link rel="stylesheet" href="/static/options/optionswitch.css">
     <link rel="stylesheet" href="/static/css/colors/default.css" id="option_color">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.4.3/sweetalert2.min.css">
     {% block style-block %}
 
     {% endblock style-block %}
@@ -402,6 +403,7 @@
 <script src="/static/plugins/countdown/jquery.syotimer.js"></script>
 <script src="/static/options/optionswitcher.js"></script>
 <script src="/static/js/custom.js"></script>
+<script src="https://cdn.jsdelivr.net/sweetalert2/6.4.3/sweetalert2.min.js"></script>
 <script src="/static/js/numeric.min.js"></script>
 {% block script-block %}
 
