--- a/rrhh/templates/print/Planilla.html
+++ b/rrhh/templates/print/Planilla.html
@@ -11,7 +11,7 @@
 {% endblock %}
 {% block header %}
     <div>
-        <h1>Delta Logistic Sociedad Anonima</h1>
+        <h1>Nombre de la Empresa</h1>
         <h3>Planilla del {{ obj.fecha_inicio }} al {{ obj.fecha_fin }}</h3>
     </div>
 {% endblock %}
