--- a/inblensa/templates/app/index.html
+++ b/inblensa/templates/app/index.html
@@ -268,13 +268,13 @@
                                         </span>
                                     </a>
                                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                                        <li><a href="/app/perfil/"><i class="fa fa-user"></i>Mi Perfil</a></li>
+                                        <li><a href="/inblensa/perfil/"><i class="fa fa-user"></i>Mi Perfil</a></li>
                                         {% comment %}<li><a href="#"><i class="fa fa-calendar"></i>My Calendar</a></li>
                                         <li><a href="#"><i class="fa fa-envelope"></i>My Inbox</a></li>
                                         <li><a href="#"><i class="fa fa-barcode"></i>My Task</a></li>{% endcomment %}
                                         <li class="divider"></li>
                                         {#<li><a href="#"><i class="fa fa-lock"></i>Screen lock</a></li>#}
-                                        <li><a href="#"><i class="fa fa-key"></i>Cerrar Sesión</a></li>
+                                        <li><a href="/admin/logout/"><i class="fa fa-key"></i>Cerrar Sesión</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -311,9 +311,9 @@
                             <li>
                                 <a href="mailbox.html"><i class="fa fa-file-excel-o"></i> <span class="nav-label">Reportes </span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level collapse">
-                                    <li><a href="/app/inventario_general">Inventario General</a></li>
-                                    <li><a href="/app/pedidos">Pedidos</a></li>
-                                    <li><a href="/app/recuperacion">Recuperacion</a></li>
+                                    <li><a href="/inblensa/inventario_general">Inventario General</a></li>
+                                    <li><a href="/inblensa/pedidos">Pedidos</a></li>
+                                    <li><a href="/inblensa/recuperacion">Recuperacion</a></li>
                                 </ul>-
                             </li>
                             {% comment %}<li>
